--- a/website/newsletter/140/index.mdx
+++ b/website/newsletter/140/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /140
-title: "This Week In React #140: ..."
+title: "This Week In React #140: Labs, RSC, Next.js, Remix, Storybook, Astro, refs, Ark, Impala, Docusaurus, React-Native, AsyncContext..."
 authors: [slorber]
 date: 04-04-2023
 image: /img/TWIR_POST.png
