--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /140
-title: "React Hebdo #140: ..."
+title: "React Hebdo #140: Labs, RSC, Next.js, Remix, Storybook, Astro, refs, Ark, Impala, Docusaurus, React-Native, AsyncContext..."
 authors: [slorber]
 date: 04-04-2023
 image: /img/TWIR_POST.png
@@ -71,13 +71,12 @@ Update officielle de la R&D autour de React qui aborde différents sujets:
 - 👀 [Astro roadmap - Client-side Routing](https://github.com/withastro/roadmap/issues/532): Astro devrait implémenter une navigation coté client. En option: Astro reste par défaut un framework MPA.
 - 👀 [Vercel - Remix without Limits](https://vercel.com/blog/vercel-remix-integration-with-edge-functions-support): Vercel propose maintenant une intégration first-class avec Remix
 - 🐦 [Dan Abramov - "we’ve changed our forms recommendations to emphasize uncontrolled inputs"](https://twitter.com/dan_abramov/status/1641830612955803650)
-- 📜 [Streaming for Serverless Node.js and Edge Runtimes with Vercel Functions](https://vercel.com/blog/streaming-for-serverless-node-js-and-edge-runtimes-with-vercel-functions)
 - 📜 [Learning React from two Angles in 2023](https://www.robinwieruch.de/learning-react/): il est maintenant possible d'apprendre React en tant que librairie, ou en tant que framework/architecture (Next.js). Pas évident de savoir par où commencer pour un débutant.
-- 📜 [Refs in React: from access to DOM to imperative API](https://www.developerway.com/posts/refs-from-dom-to-api)
-- 📜 [Rethinking React best practices](https://frontendmastery.com/posts/rethinking-react-best-practices/)
-- 📜 [isMounted tricks are code-smell](https://reacttraining.com/blog/isMounted-tricks-are-code-smell)
+- 📜 [Refs in React: from access to DOM to imperative API](https://www.developerway.com/posts/refs-from-dom-to-api): bonne intro aux refs, forwardRef et useImperativeHandle
+- 📜 [Rethinking React best practices](https://frontendmastery.com/posts/rethinking-react-best-practices/): illustre bien la tendance actuelle de React qui passe progressivement d'une simple librairie UI à une architecture full-stack.
+- 📜 [isMounted tricks are code-smell](https://reacttraining.com/blog/isMounted-tricks-are-code-smell): si vous utilisez ce genre de pattern, je pense que cela posera problème avec la future Offscreen API.
 - 📜 [Setting State On An Unmounted Component](https://reacttraining.com/blog/setting-state-on-unmounted-component)
-- 📜 [The useEffect cleanup and the two circumstances it's called.](https://reacttraining.com/blog/useEffect-cleanup)
+- 📜 [The useEffect cleanup and the two circumstances it's called](https://reacttraining.com/blog/useEffect-cleanup)
 - 📜 [How Will the Future of Web Development Be Affected by Influential New React Docs?](https://luketheweb.dev/blog/how-will-the-future-of-web-development-be-affected-by-influential-new-react-docs)
 - 📜 [Making Tanstack Table 1000x faster with a 1 line change](https://jpcamara.com/2023/03/07/making-tanstack-table.html)
 - 📜 [How to build zero-CLS A/B tests with Next.js and Vercel Edge Config](https://vercel.com/blog/zero-cls-experiments-nextjs-edge-config)
@@ -98,8 +97,9 @@ Update officielle de la R&D autour de React qui aborde différents sujets:
 - 📦 [Ionic 7](https://ionic.io/blog/ionic-7-is-here)
 - 🧑‍🎓 [React.gg](https://react.gg): nouveau cours React prometteur en beta privée
 - 🎥 [Theo - So I had a call with Dan...](https://www.youtube.com/watch?v=qZzmUVspiEo): je partage l'avis que le nommage client/server components n'est pas idéal, et "use interactive" me semble une bonne idée.
-- 🎥 [The official T3 Stack Tutorial](https://www.youtube.com/watch?v=YkOSUVzOAA4)
 - 🎥 [Smarter and Simpler React State](https://www.youtube.com/watch?v=Cp64YbYBNDA)
+- 🎥 [Next.js App Router: Routing, Data Fetching, Caching](https://www.youtube.com/watch?v=gSSsZReIFRk)
+- 🎥 [The official T3 Stack Tutorial](https://www.youtube.com/watch?v=YkOSUVzOAA4)
 
 <SubscribeFormEmbed />
 
@@ -131,7 +131,7 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 ## 📱 React-Native {#react-native}
 
 - 📜 [Storybook for React Native (6.5)](https://storybook.js.org/blog/storybook-for-react-native-6-5/): super nouvelle pour les utilisateurs de Storybook sur React-Native, l'intégration rattrape son retard sur Storybook web, adopte CSF, Controls, Args, et devrait bientôt être compatible avec Storybook 7.0. Avec les nouvelles features Metro (`require.context`), le besoin de générer un index de stories devrait prochainement disparaitre.
-- 📜 [How Migrating from Vanilla Redux to Redux Toolkit Improved State Management in Shopify POS](https://shopify.engineering/react-redux-toolkit-migration): retour d'expérience de Shopify sur une migration incrémentale vers RTK qui a permis de supprimer 3500 lignes de boilerplate.
+- 📜 [How Migrating from Vanilla Redux to Redux Toolkit Improved State Management in Shopify POS](https://shopify.engineering/react-redux-toolkit-migration): retour d'expérience sur une migration incrémentale vers RTK qui a permis de supprimer 3500 lignes.
 - 👀 [RFC: DOM traversal and layout APIs in React Native](https://github.com/react-native-community/discussions-and-proposals/pull/607): API avancée qui pourrait débloquer l'implémentation de features comme `MutationObserver`, `IntersectionObserver`...
 - 👀 [View Flattening on iOS](https://twitter.com/SamuelSusla/status/1641086480675225601): React-Native pouvait déjà optimiser sur Android en évitant de créer des vues natives inutiles. Samuel explique le fonctionnement et annonce que maintenant ça marche aussi pour iOS.
 - 👀 [Expo Router + Apple Handoff demo](https://twitter.com/Baconbrix/status/1641850192839180315): innovation iOS pour passer de la version web <=> mobile, et ça devrait bien marcher avec les apps Expo Router universelles 👌
