--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
@@ -1,10 +1,9 @@
 ---
 slug: /140
-title: "React Hebdo #140: Labs, RSC, Next.js, Remix, Storybook, Astro, refs, Ark, Impala, Docusaurus, React-Native, AsyncContext..."
+title: "React Hebdo #140: React Labs, Server Components, Next.js, Remix, Storybook, Astro, refs, Ark, Impala, Docusaurus, Expo-Blur, WebView, AsyncContext..."
 authors: [slorber]
 date: 04-04-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
@@ -15,9 +14,7 @@ Un nouveau blog post React Labs présente maintenant React Forget en reactivity 
 
 Les Server Components n'en finissent plus de nous surprendre. Pas mal d'innovations liées ne sont pas encore trop mises en avant, à part quelques signaux faibles sur Twitter.
 
-https://chainreactconf.com/ promo ?
-
-<Todo />
+Il y a également pas mal de contenu pour les devs React-Native!
 
 <!-- truncate -->
 
@@ -48,7 +45,8 @@ React-admin, c'est 6 ans de développement, plus de 20 000 développeurs convain
 
 ## ⚛️ React {#react}
 
-**[![React Labs](/emails/issues/140/reactlabs.jpg)](https://react.dev/blog/2023/03/22/react-labs-what-we-have-been-working-on-march-2023)**
+[![React Labs](/emails/issues/140/reactlabs.jpg)](https://react.dev/blog/2023/03/22/react-labs-what-we-have-been-working-on-march-2023)
+
 **[React Labs: What We've Been Working On – March 2023](https://react.dev/blog/2023/03/22/react-labs-what-we-have-been-working-on-march-2023)**
 
 Update officielle de la R&D autour de React qui aborde différents sujets:
@@ -170,8 +168,6 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 - 🎥 [Arrête d'utiliser "&&" dans tes conditions JSX !](https://www.youtube.com/watch?v=9vhakRW_dEw)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
