--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/140/index.mdx
@@ -67,10 +67,10 @@ Update officielle de la R&D autour de React qui aborde différents sujets:
 - 👀 [Lee Robinson - "Improved sitemap support is coming to Nextjs"](https://twitter.com/leeerob/status/1639639575843729409)
 - 👀 [Lee Robinson - "The Next.js App Router now supports static exports!"](https://twitter.com/leeerob/status/1640445075959484418)
 - 👀 [Astro roadmap - Client-side Routing](https://github.com/withastro/roadmap/issues/532): Astro devrait implémenter une navigation coté client. En option: Astro reste par défaut un framework MPA.
-- 👀 [Vercel - Remix without Limits](https://vercel.com/blog/vercel-remix-integration-with-edge-functions-support): Vercel propose maintenant une intégration first-class avec Remix
+- 👀 [Vercel - Remix without Limits](https://vercel.com/blog/vercel-remix-integration-with-edge-functions-support): Vercel propose maintenant une intégration first-class avec Remix.
 - 🐦 [Dan Abramov - "we’ve changed our forms recommendations to emphasize uncontrolled inputs"](https://twitter.com/dan_abramov/status/1641830612955803650)
 - 📜 [Learning React from two Angles in 2023](https://www.robinwieruch.de/learning-react/): il est maintenant possible d'apprendre React en tant que librairie, ou en tant que framework/architecture (Next.js). Pas évident de savoir par où commencer pour un débutant.
-- 📜 [Refs in React: from access to DOM to imperative API](https://www.developerway.com/posts/refs-from-dom-to-api): bonne intro aux refs, forwardRef et useImperativeHandle
+- 📜 [Refs in React: from access to DOM to imperative API](https://www.developerway.com/posts/refs-from-dom-to-api): bonne intro aux refs, forwardRef et useImperativeHandle.
 - 📜 [Rethinking React best practices](https://frontendmastery.com/posts/rethinking-react-best-practices/): illustre bien la tendance actuelle de React qui passe progressivement d'une simple librairie UI à une architecture full-stack.
 - 📜 [isMounted tricks are code-smell](https://reacttraining.com/blog/isMounted-tricks-are-code-smell): si vous utilisez ce genre de pattern, je pense que cela posera problème avec la future Offscreen API.
 - 📜 [Setting State On An Unmounted Component](https://reacttraining.com/blog/setting-state-on-unmounted-component)
@@ -132,7 +132,7 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 - 📜 [How Migrating from Vanilla Redux to Redux Toolkit Improved State Management in Shopify POS](https://shopify.engineering/react-redux-toolkit-migration): retour d'expérience sur une migration incrémentale vers RTK qui a permis de supprimer 3500 lignes.
 - 👀 [RFC: DOM traversal and layout APIs in React Native](https://github.com/react-native-community/discussions-and-proposals/pull/607): API avancée qui pourrait débloquer l'implémentation de features comme `MutationObserver`, `IntersectionObserver`...
 - 👀 [View Flattening on iOS](https://twitter.com/SamuelSusla/status/1641086480675225601): React-Native pouvait déjà optimiser sur Android en évitant de créer des vues natives inutiles. Samuel explique le fonctionnement et annonce que maintenant ça marche aussi pour iOS.
-- 👀 [Expo Router + Apple Handoff demo](https://twitter.com/Baconbrix/status/1641850192839180315): innovation iOS pour passer de la version web <=> mobile, et ça devrait bien marcher avec les apps Expo Router universelles 👌
+- 👀 [Expo Router + Apple Handoff demo](https://twitter.com/Baconbrix/status/1641850192839180315): super innovation iOS pour passer de la version web <=> mobile, et ça devrait bien marcher avec les apps Expo Router universelles 👌
 - 🎥 [The Joy of Painting with React Native](https://www.youtube.com/watch?v=GQqL1OCoOFM): nouveau style de video Skia ASMR par William Candillon 😄
 - 📦 [React-Native WebView 12.0](https://twitter.com/titozzz/status/1642147926762815490): support nouvelle architecture
 - 📦 [React-Native 0.76.1](https://github.com/facebook/react-native/releases/tag/v0.71.6): série de releases liés à des problèmes de build sur XCode
