--- a/website/newsletter/140/index.mdx
+++ b/website/newsletter/140/index.mdx
@@ -8,17 +8,13 @@ image: /img/TWIR_POST.png
 
 Hi everyone!
 
-Je rentre juste de vacances: on rattrape 2 semaines de news! Beaucoup de liens, cette édition sera un peu moins commentée que d'habitude.
+I'm just back from vacations: we catch up with 2 weeks of news!
 
-Un nouveau blog post React Labs présente maintenant React Forget en reactivity compiler.
+A new React Labs post now presents React Forget as a reactivity compiler.
 
-Les Server Components n'en finissent plus de nous surprendre. Pas mal d'innovations liées ne sont pas encore trop mises en avant, à part quelques signaux faibles sur Twitter.
+Server Components never cease to surprise. Many related innovations are not yet highlighted outside a few tweets.
 
-Il y a également pas mal de contenu pour les devs React-Native.
-
-"thisweekinreact"
-
-https://chainreactconf.com/ promo ?
+For React-Native developers, **[Chain React](https://chainreactconf.com/)** is a great conf in the USA (Portland, May 18-19). They offer us a 10% discount with code `thisweekinreact`.
 
 <!-- truncate -->
 
@@ -54,30 +50,30 @@ React-admin has been actively **maintained for 5 years**, and has already convin
 
 **[React Labs: What We've Been Working On – March 2023](https://react.dev/blog/2023/03/22/react-labs-what-we-have-been-working-on-march-2023)**
 
-Update officielle de la R&D autour de React qui aborde différents sujets:
+An official update from the R&D around React that addresses different topics:
 
-- React Server Components. Une belle implémentation est déjà dispo dans Next.js via App Router. Les RSCs avec async/await devraient aussi pouvoir tourner dans une app client. J'ai l'impression qu'ils veulent unifier les abstractions coté client/server (et je pense que [AsyncContext](https://twitter.com/sebastienlorber/status/1639183216799100928) va être super pour ça!).
-- Asset loading: intégration avec Suspense pour le chargement de CSS, font et images ([details](https://twitter.com/acdlite/status/1637102880850059264)).
-- Document Metadata: support officiel d'une API pour les metadata `<head>` avec support streaming.
-- React Optimizing Compiler: n'est plus présenté comme un auto-memoizing compiler, mais comme un reactivity compiler. D'ailleurs [React Forget a atteint un milestone](https://twitter.com/en_JS/status/1641494974893281282) et ils se concentrent maintenant sur l'intégration.
-- Offscreen Rendering: c'est vraiment une innovation que j'attends avec impatience, qui différencie React des autres frameworks. Meta teste le prerendering sur ses apps React-Native avec des gains de performance positifs
-- Transition Tracing: une API qui permet de détecter les transitions lentes, mis sur pause pour l'instant.
+- React Server Components. A nice implementation is already available in Next.js via App Router. RSCs with async/await should also be able to run in a client app. I have the impression they want to unify client/server side model and I think [AsyncContext](https://twitter.com/sebastienlorber/status/1639183216799100928) will be great for that!
+- Asset loading: integration with Suspense for loading CSS, font and images ([more details](https://twitter.com/acdlite/status/1637102880850059264)).
+- Document Metadata: first-class support for an API for `<head>` metadata with streaming support.
+- React Optimizing Compiler: no longer presented as an auto-memoizing compiler, but as a reactivity compiler. [React Forget has reached a milestone](https://twitter.com/en_JS/status/1641494974893281282), and they are focusing on integration.
+- Offscreen Rendering: an innovation I'm really looking forward to, which differentiates React from other frameworks. Meta is testing prerendering on React-Native apps with positive results.
+- Transition Tracing: permits to detect slow transitions.
 
 ---
 
 - 🥇 [React.dev on ProductHunt - Product of the day](https://twitter.com/ProductHunt/status/1640956972450328577)
-- 👤 [Tom Occhino](https://twitter.com/tomocchino/status/1640800001625411606) et [Dominic Gannaway](https://twitter.com/trueadm/status/1640761270566633472) rejoignent Vercel.
-- 👀 Les Server Components sont [capables d'envoyer des modules](https://twitter.com/dan_abramov/status/1638760757239087104) de manière lazy au client.
+- 👤 [Tom Occhino](https://twitter.com/tomocchino/status/1640800001625411606) and [Dominic Gannaway](https://twitter.com/trueadm/status/1640761270566633472) joined Vercel.
+- 👀 Server Components can [lazily send modules](https://twitter.com/dan_abramov/status/1638760757239087104) to client.
 - 👀 [Jarred Summer - "Server Components is coming in Bun v0.6.0"](https://twitter.com/jarredsumner/status/1642821108402630657)
 - 👀 [Lee Robinson - "Improved sitemap support is coming to Nextjs"](https://twitter.com/leeerob/status/1639639575843729409)
 - 👀 [Lee Robinson - "The Next.js App Router now supports static exports!"](https://twitter.com/leeerob/status/1640445075959484418)
-- 👀 [Astro roadmap - Client-side Routing](https://github.com/withastro/roadmap/issues/532): Astro devrait implémenter une navigation coté client. En option: Astro reste par défaut un framework MPA.
-- 👀 [Vercel - Remix without Limits](https://vercel.com/blog/vercel-remix-integration-with-edge-functions-support): Vercel propose maintenant une intégration first-class avec Remix
+- 👀 [Astro roadmap - Client-side Routing](https://github.com/withastro/roadmap/issues/532): Astro plans to implement client-side navigation. Opt-in: Astro remains by default an MPA framework.
+- 👀 [Vercel - Remix without Limits](https://vercel.com/blog/vercel-remix-integration-with-edge-functions-support): Vercel now offers first-class integration with Remix.
 - 🐦 [Dan Abramov - "we’ve changed our forms recommendations to emphasize uncontrolled inputs"](https://twitter.com/dan_abramov/status/1641830612955803650)
-- 📜 [Learning React from two Angles in 2023](https://www.robinwieruch.de/learning-react/): il est maintenant possible d'apprendre React en tant que librairie, ou en tant que framework/architecture (Next.js). Pas évident de savoir par où commencer pour un débutant.
-- 📜 [Refs in React: from access to DOM to imperative API](https://www.developerway.com/posts/refs-from-dom-to-api): bonne intro aux refs, forwardRef et useImperativeHandle
-- 📜 [Rethinking React best practices](https://frontendmastery.com/posts/rethinking-react-best-practices/): illustre bien la tendance actuelle de React qui passe progressivement d'une simple librairie UI à une architecture full-stack.
-- 📜 [isMounted tricks are code-smell](https://reacttraining.com/blog/isMounted-tricks-are-code-smell): si vous utilisez ce genre de pattern, je pense que cela posera problème avec la future Offscreen API.
+- 📜 [Learning React from two Angles in 2023](https://www.robinwieruch.de/learning-react/): it is possible to learn React as a library, or as a framework/architecture (Next.js). Not easy to know where to start for a beginner.
+- 📜 [Refs in React: from access to DOM to imperative API](https://www.developerway.com/posts/refs-from-dom-to-api): good intro to refs, forwardRef, useImperativeHandle.
+- 📜 [Rethinking React best practices](https://frontendmastery.com/posts/rethinking-react-best-practices/): describes well the trend of React which is progressively moving from a simple UI library to a full-stack architecture.
+- 📜 [isMounted tricks are code-smell](https://reacttraining.com/blog/isMounted-tricks-are-code-smell): if you use this kind of pattern, I think it will become a problem with the future Offscreen API.
 - 📜 [Setting State On An Unmounted Component](https://reacttraining.com/blog/setting-state-on-unmounted-component)
 - 📜 [The useEffect cleanup and the two circumstances it's called](https://reacttraining.com/blog/useEffect-cleanup)
 - 📜 [How Will the Future of Web Development Be Affected by Influential New React Docs?](https://luketheweb.dev/blog/how-will-the-future-of-web-development-be-affected-by-influential-new-react-docs)
@@ -85,10 +81,10 @@ Update officielle de la R&D autour de React qui aborde différents sujets:
 - 📜 [How to build zero-CLS A/B tests with Next.js and Vercel Edge Config](https://vercel.com/blog/zero-cls-experiments-nextjs-edge-config)
 - 📜 [Custom fonts without compromise using Next.js and `next/font`](https://vercel.com/blog/nextjs-next-font)
 - 📜 [Animated page transitions with Remix's nested routes](https://www.jacobparis.com/guides/remix-animated-page-transitions)
-- 📦 [Storybook 7.0](https://github.com/storybookjs/storybook/releases/tag/v7.0.0): belle release avec Vite, CSF3, frameworks API, MDX2... Les nouveautés ont déjà été présentées précédemment, mais on aura surement droit a un blog post prochainement?
+- 📦 [Storybook 7.0](https://github.com/storybookjs/storybook/releases/tag/v7.0.0): nice release with Vite, CSF3, API frameworks, MDX2... The new features have already been presented before, but we'll probably get a blog post soon?
 - 📦 [Server Components Demo updated](https://twitter.com/dan_abramov/status/1641596168290312195)
-- 📦 [Ark UI](https://ark-ui.com/): l'équipe Chakra UI présente une nouvelle lib UI universelle (React, Vue, Solid) basée sur les state machines de Zag.js
-- 📦 [Simple-RSC](https://github.com/bholmesdev/simple-rsc): implémentation simplifiée et annotée des Server Components, suite à un [stream entre Ben Holmes (Astro) et Dan Abramov](https://twitter.com/BHolmesDev/status/1641659705444401152).
+- 📦 [Ark UI](https://ark-ui.com/): the Chakra UI team introduced a new universal UI lib (React, Vue, Solid) based on Zag.js state machines.
+- 📦 [Simple-RSC](https://github.com/bholmesdev/simple-rsc): simple and annotated Server Components implementation, related to a [long stream between Ben Holmes (Astro) and Dan Abramov](https://twitter.com/BHolmesDev/status/1641659705444401152).
 - 📦 [Impala - A very simple static React framework](https://github.com/ascorbic/impala)
 - 📦 [Webpack-RSC](https://twitter.com/unstubbable/status/1641495749627109380)
 - 📦 [MDX syntax highlighting VS Code extension](https://twitter.com/wooorm/status/1638898049404612608)
@@ -98,8 +94,8 @@ Update officielle de la R&D autour de React qui aborde différents sujets:
 - 📦 [Framer Motion 10.9 - Timelines](https://twitter.com/mattgperry/status/1639286184965750790)
 - 📦 [Planby 2.3.0 - Schedule / Timeline for React with](https://dev.to/kozerkarol/schedule-timeline-for-react-with-planby-223-2djf)
 - 📦 [Ionic 7](https://ionic.io/blog/ionic-7-is-here)
-- 🧑‍🎓 [React.gg](https://react.gg): nouveau cours React prometteur en beta privée
-- 🎥 [Theo - So I had a call with Dan...](https://www.youtube.com/watch?v=qZzmUVspiEo): je partage l'avis que le nommage client/server components n'est pas idéal, et "use interactive" me semble une bonne idée.
+- 🧑‍🎓 [React.gg](https://react.gg): new promising React course in private beta
+- 🎥 [Theo - So I had a call with Dan...](https://www.youtube.com/watch?v=qZzmUVspiEo): I agree that the client/server components naming is not ideal, and "use interactive" seems to me a good idea.
 - 🎥 [Smarter and Simpler React State](https://www.youtube.com/watch?v=Cp64YbYBNDA)
 - 🎥 [Next.js App Router: Routing, Data Fetching, Caching](https://www.youtube.com/watch?v=gSSsZReIFRk)
 - 🎥 [The official T3 Stack Tutorial](https://www.youtube.com/watch?v=YkOSUVzOAA4)
@@ -133,17 +129,18 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## 📱 React-Native {#react-native}
 
-- 📜 [Storybook for React Native (6.5)](https://storybook.js.org/blog/storybook-for-react-native-6-5/): super nouvelle pour les utilisateurs de Storybook sur React-Native, l'intégration rattrape son retard sur Storybook web, adopte CSF, Controls, Args, et devrait bientôt être compatible avec Storybook 7.0. Avec les nouvelles features Metro (`require.context`), le besoin de générer un index de stories devrait prochainement disparaitre.
-- 📜 [How Migrating from Vanilla Redux to Redux Toolkit Improved State Management in Shopify POS](https://shopify.engineering/react-redux-toolkit-migration): retour d'expérience sur une migration incrémentale vers RTK qui a permis de supprimer 3500 lignes.
-- 👀 [RFC: DOM traversal and layout APIs in React Native](https://github.com/react-native-community/discussions-and-proposals/pull/607): API avancée qui pourrait débloquer l'implémentation de features comme `MutationObserver`, `IntersectionObserver`...
-- 👀 [View Flattening on iOS](https://twitter.com/SamuelSusla/status/1641086480675225601): React-Native pouvait déjà optimiser sur Android en évitant de créer des vues natives inutiles. Samuel explique le fonctionnement et annonce que maintenant ça marche aussi pour iOS.
-- 👀 [Expo Router + Apple Handoff demo](https://twitter.com/Baconbrix/status/1641850192839180315): innovation iOS pour passer de la version web <=> mobile, et ça devrait bien marcher avec les apps Expo Router universelles 👌
-- 🎥 [The Joy of Painting with React Native](https://www.youtube.com/watch?v=GQqL1OCoOFM): nouveau style de video Skia ASMR par William Candillon 😄
-- 📦 [React-Native WebView 12.0](https://twitter.com/titozzz/status/1642147926762815490): support nouvelle architecture
-- 📦 [React-Native 0.76.1](https://github.com/facebook/react-native/releases/tag/v0.71.6): série de releases liés à des problèmes de build sur XCode
-- 📦 [Expo-Blur - Android support](https://twitter.com/aleqsio/status/1638893843457212418): il sera bientôt possible d'utiliser BlurView sur toutes les plateformes
+- 📜 [Storybook for React Native (6.5)](https://storybook.js.org/blog/storybook-for-react-native-6-5/): great news for Storybook users on React-Native, the integration is catching up with Storybook web, adopting CSF, Controls, Args, and should soon be compatible with Storybook 7.0. With the new Metro features (`require.context`), the need to generate a story index should soon disappear.
+- 📜 [How Migrating from Vanilla Redux to Redux Toolkit Improved State Management in Shopify POS](https://shopify.engineering/react-redux-toolkit-migration): feedback on an incremental migration to RTK, removing 3500 lines.
+- 👀 [RFC: DOM traversal and layout APIs in React Native](https://github.com/react-native-community/discussions-and-proposals/pull/607): new advanced API could unlock the implementation of features like `MutationObserver`, `IntersectionObserver`...
+- 👀 [View Flattening on iOS](https://twitter.com/SamuelSusla/status/1641086480675225601): React-Native could already optimize on Android by avoiding to create useless native views. Samuel explains how it works and announces that now it works for iOS too.
+- 👀 [Expo Router + Apple Handoff demo](https://twitter.com/Baconbrix/status/1641850192839180315): great iOS innovation to switch from web <=> mobile, and it should work well with universal Expo Router apps 👌
+- 🎥 [The Joy of Painting with React Native](https://www.youtube.com/watch?v=GQqL1OCoOFM): new style of Skia ASMR video by William Candillon 😄
+- 📦 [React-Native WebView 12.0](https://twitter.com/titozzz/status/1642147926762815490): new architecture support.
+- 📦 [React-Native 0.76.1](https://github.com/facebook/react-native/releases/tag/v0.71.6): new releases fixing XCode build issues.
+- 📦 [Expo-Blur - Android support](https://twitter.com/aleqsio/status/1638893843457212418): BlurView will soon be cross-platform.
 - 🐦 [Tzvetan Mikov - "Messenger for MacOS is a React Native app."](https://twitter.com/tmikov/status/1642630975430754305)
 - 🎙️ [RNR 263 - Shopify Goes React Native!](https://reactnativeradio.com/episodes/rnr-263-shopify-goes-react-native)
+- 👥 [Chain React](https://chainreactconf.com/): conf in Portland, May 18-19 (-10% discount with "thisweekinreact" code).
 
 ---
 
@@ -167,8 +164,8 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 
 ## 🔀 Other {#other}
 
-- [Updates from the 95th TC39 meeting](https://dev.to/hemanth/updates-from-the-95th-tc39-meeting-ne5): belles progressions, dont [AsyncContext (stage 2)](https://twitter.com/sebastienlorber/status/1639183216799100928)!
-- [Node.js compatibility for Cloudflare Workers](https://blog.cloudflare.com/workers-node-js-asynclocalstorage/): dont AsyncLocalStorage (~= AsyncContext mais coté serveur)
+- [Updates from the 95th TC39 meeting](https://dev.to/hemanth/updates-from-the-95th-tc39-meeting-ne5): nice progressions, including [AsyncContext (stage 2)](https://twitter.com/sebastienlorber/status/1639183216799100928)!
+- [Node.js compatibility for Cloudflare Workers](https://blog.cloudflare.com/workers-node-js-asynclocalstorage/): including AsyncLocalStorage (~= server-side AsyncContext)
 - [WebKit Features in Safari 16.4](https://webkit.org/blog/13966/webkit-features-in-safari-16-4/)
 - [JavaScript import maps are now supported cross-browser](https://web.dev/import-maps-in-all-modern-browsers/)
 - [Push notifications are now supported cross-browser](https://web.dev/push-notifications-in-all-modern-browsers/)
