--- a/website/newsletter/141/index.mdx
+++ b/website/newsletter/141/index.mdx
@@ -61,8 +61,8 @@ React-admin has been actively **maintained for 5 years**, and has already convin
 
 Test a starter site
 
-- [Docusaurus](https://github.com/tinacms/tinasaurus) (github.com)
-- [Next.js + Tailwind with visual editing](https://github.com/tinacms/tina-cloud-starter) (github.com)
+- [Docusaurus](https://github.com/tinacms/tinasaurus) (Github)
+- [Next.js + Tailwind with visual editing](https://github.com/tinacms/tina-cloud-starter) (Github)
 
 Or run  `npx create-tina-app@latest` then visit `localhost:3000/admin`
 
